bin/release/log.txt
In file included from generic/basic/device/device.hpp:7,
                 from generic/basic/interface.hpp:306,
                 from main.cpp:1:
generic/basic/device/opencl/opencl.hpp:155:43: error: invalid use of qualified-name 'ap::opencl::execution_context_type::thread_local_command_queue'
  155 |             boost::compute::command_queue execution_context_type::thread_local_command_queue = boost::compute::command_queue(boost::compute::system::default_context(), boost::compute::system::default_device());
      |                                           ^~~~~~~~~~~~~~~~~~~~~~
